css/main.css
/* ... */
.header__body {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.header__btns {
  display: flex;
  align-items: center;
  gap: 10px;
}
.header .logo {
  width: 100%;
  max-width: 200px;
}
.header .logo img {
  max-width: 100%;
}

.mob-992 {
  display: none;
}

.burger {
  position: relative;
  height: 25px;
  width: 30px;
}
.burger span {
  position: absolute;
  width: 100%;
  height: 2px;
  display: block;
  background: #000;
  transition: 0.5s;
}
.burger span:nth-child(1) {
  transform: translate(-50%, -50%);
  top: 0%;
  left: 50%;
}
.burger span:nth-child(2) {
  top: 50%;
  transform: translate(0, -50%) scale(1);
}
.burger span:nth-child(3) {
  bottom: 0;
  transform: translate(-50%, 0%);
  left: 50%;
}
.burger.active span:nth-child(1) {
  transform: translate(-50%, -50%) rotate(45deg);
  top: 50%;
}
.burger.active span:nth-child(2) {
  top: 50%;
  transform: translate(0, -50%) scale(0);
}
.burger.active span:nth-child(3) {
  transform: translate(-50%, -50%) rotate(-45deg);
  top: 50%;
  bottom: auto;
}

.menu-mob {
  padding: 16px 20px;
  display: flex;
  align-items: center;
  justify-content: space-around;
  gap: 10px;
  box-shadow: 0 0 50px rgba(0, 0, 0, 0.07);
  border-top: 1px solid #e4e4e4;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  background: #fff;
  z-index: 19;
}
.menu-mob__item {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-size: 14px;
  color: #96a3b0;
  line-height: normal;
  text-align: center;
}
.menu-mob__item:before {
  font-size: 24px;
  color: #96a3b0;
}

/* ------- адаптация ------- */
@media screen and (min-width: 992px) {
  .navigation ul {
    display: flex;
    align-items: center;
  }
}
@media screen and (max-width: 992px) {
  .mob-992 {
    display: block;
  }
  .burger-body {
    padding: 70px;
    position: fixed;
    top: 0;
    right: 0;
    background: #fff;
    min-height: 100%;
    max-height: 100%;
    overflow: auto;
    z-index: 15;
    transform: translate(100%, 0);
    transition: 0.3s;
    opacity: 0;
  }
  .burger-body__close {
    position: absolute;
    top: 0;
    right: 0;
    padding: 10px;
  }
  .burger-body.active {
    transform: translate(0%, 0);
    opacity: 1;
  }
}
@media screen and (max-width: 768px) {
  .header {
    display: none;
  }
}
@media screen and (max-width: 370px) {
  .menu-mob {
    padding: 14px 20px;
  }
  .menu-mob__item {
    font-size: 12px;
  }
  .menu-mob__item:before {
    font-size: 20px;
  }
}
/* ------- end ------- */
/* Стили для header-old */
.header-old {
  padding: 8px 0;
  background: #ffffff;
  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
}
.header-old .logo img {
  max-height: 60px;
  width: auto;
}
.header-old__body {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.header-old__right {
  display: flex;
  align-items: center;
  margin-right: 80px;
}
.header-old__cell {
  position: relative;
  padding: 0 30px;
  display: flex;
  align-items: center;
  gap: 24px;
}
.header-old__cell:first-child {
  padding-left: 0;
}
.header-old__cell:last-child {
  padding-right: 0;
}
.header-old__cell:after {
  content: "";
  width: 2px;
  height: 40px;
  background: #e7e7e7;
  position: absolute;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
}
.header-old__cell:last-child::after {
  display: none;
}
.header-old .burger-old {
  display: none;
}

.burger-old {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 35px;
  height: 22px;
}
.burger-old span {
  display: block;
  height: 2px;
  width: 100%;
  background: #000;
}

@media screen and (max-width: 1200px) {
  .header-old__cell {
    padding: 0 20px;
  }
  .header-old .burger {
    display: none;
  }
}
@media screen and (max-width: 992px) {
  .header-old .burger-body {
    display: none;
  }
  .header-old .burger {
    display: flex;
  }
}
/* Пользователь  */
.user-link {
  cursor: pointer;
  position: relative;
  display: flex;
  align-items: center;
}
.user-link__title {
  margin-right: 20px;
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-size: 18px;
  color: #000;
  line-height: 130%;
  text-transform: uppercase;
  transition: 0.3s;
  position: relative;
  z-index: 15;
}
.user-link__photo {
  width: 60px;
  height: 60px;
  position: relative;
  z-index: 15;
}
.user-link:before {
  content: "";
  position: absolute;
  top: -10px;
  left: -20px;
  bottom: -10px;
  right: -20px;
  background: #fff;
  box-shadow: 0 -50px 40px rgba(0, 0, 0, 0.07);
  border-radius: 24px 24px 0 0;
  transition: 0.3s;
  z-index: 12;
  opacity: 0;
  visibility: hidden;
}
.user-link:hover:before {
  opacity: 1;
  visibility: visible;
}
.user-link:hover .user-menu {
  opacity: 1;
  visibility: visible;
}

/* Выбор языка */
.lang {
  display: flex;
  align-items: center;
}
.lang__item {
  display: flex;
  align-items: center;
}
.lang__item img {
  width: 30px;
  margin-right: 6px;
}
.lang__item span {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-size: 18px;
  color: #000;
  line-height: 130%;
}
.lang__item:not(:last-child) {
  margin-right: 20px;
}
.lang__item:hover span {
  text-decoration: underline;
}

/* Стили для виджетов в шапке */
.wallet-widget {
  padding: 8px 10px;
  border-radius: 8px;
  background: #f4f6fa;
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-size: 16px;
  color: #1a1a1a;
  line-height: normal;
  display: flex;
  align-items: center;
  gap: 10px;
}
.wallet-widget:before {
  font-size: 24px;
  color: #1a1a1a;
}

.user-menu {
  transition: 0.3s;
  opacity: 0;
  visibility: hidden;
  z-index: 10;
  width: 340px;
  position: absolute;
  right: -20px;
  top: 100%;
  background: #fff;
  padding: 32px 32px 16px 32px;
  border-radius: 24px 0px 24px 24px;
  box-shadow: 0 0 50px rgba(0, 0, 0, 0.07);
  display: flex;
  flex-direction: column;
  gap: 18px;
}
/* ... */

